// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-tree should render multiple tree component 1`] = `
<wpp-tree class="wpp-tree" exportparts="tree-container, tree-empty-text" multiple="">
  <mock:shadow-root>
    <div class="container" part="tree-container">
      <wpp-tree-item level="1" multiple="" search="" text="Cars">
        <div class="content-container" part="content" slot="content">
          <wpp-tree-item level="2" multiple="" search="" text="Toyota">
            <div slot="icon-end">
              <wpp-menu-context>
                <wpp-icon-more class="menu-trigger" direction="horizontal" slot="trigger-element" style="padding: 4px; color: var(--wpp-grey-color-800);"></wpp-icon-more>
                <div>
                  <wpp-list-item value="remove">
                    <wpp-icon-info-v3-3-0 slot="left"></wpp-icon-info-v3-3-0>
                    <span slot="label">
                      remove
                    </span>
                  </wpp-list-item>
                  <wpp-list-item value="save">
                    <wpp-icon-cross-v3-3-0 slot="left"></wpp-icon-cross-v3-3-0>
                    <span slot="label">
                      save
                    </span>
                  </wpp-list-item>
                </div>
              </wpp-menu-context>
            </div>
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" multiple="" search="" text="Skoda">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" multiple="" search="" text="Volkswagen">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
        </div>
      </wpp-tree-item>
      <wpp-tree-item level="1" multiple="" search="" text="Motorcycle"></wpp-tree-item>
      <wpp-tree-item level="1" multiple="" search="" text="Planes">
        <div class="content-container" part="content" slot="content"></div>
      </wpp-tree-item>
    </div>
  </mock:shadow-root>
</wpp-tree>
`;

exports[`wpp-tree should render tree component 1`] = `
<wpp-tree class="wpp-tree" exportparts="tree-container, tree-empty-text">
  <mock:shadow-root>
    <div class="container" part="tree-container">
      <wpp-tree-item level="1" search="" text="Cars">
        <div class="content-container" part="content" slot="content">
          <wpp-tree-item level="2" search="" text="Toyota">
            <div slot="icon-end">
              <wpp-menu-context>
                <wpp-icon-more class="menu-trigger" direction="horizontal" slot="trigger-element" style="padding: 4px; color: var(--wpp-grey-color-800);"></wpp-icon-more>
                <div>
                  <wpp-list-item value="remove">
                    <wpp-icon-info-v3-3-0 slot="left"></wpp-icon-info-v3-3-0>
                    <span slot="label">
                      remove
                    </span>
                  </wpp-list-item>
                  <wpp-list-item value="save">
                    <wpp-icon-cross-v3-3-0 slot="left"></wpp-icon-cross-v3-3-0>
                    <span slot="label">
                      save
                    </span>
                  </wpp-list-item>
                </div>
              </wpp-menu-context>
            </div>
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" search="" text="Skoda">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" search="" text="Volkswagen">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
        </div>
      </wpp-tree-item>
      <wpp-tree-item level="1" search="" text="Motorcycle"></wpp-tree-item>
      <wpp-tree-item level="1" search="" text="Planes">
        <div class="content-container" part="content" slot="content"></div>
      </wpp-tree-item>
    </div>
  </mock:shadow-root>
</wpp-tree>
`;

exports[`wpp-tree should render tree component with filtered data 1`] = `
<wpp-tree class="wpp-tree" exportparts="tree-container, tree-empty-text">
  <mock:shadow-root>
    <div class="container" part="tree-container">
      <wpp-tree-item level="1" search="cars" text="Cars">
        <div class="content-container" part="content" slot="content">
          <wpp-tree-item level="2" search="cars" text="Toyota">
            <div slot="icon-end">
              <wpp-menu-context>
                <wpp-icon-more class="menu-trigger" direction="horizontal" slot="trigger-element" style="padding: 4px; color: var(--wpp-grey-color-800);"></wpp-icon-more>
                <div>
                  <wpp-list-item value="remove">
                    <wpp-icon-info-v3-3-0 slot="left"></wpp-icon-info-v3-3-0>
                    <span slot="label">
                      remove
                    </span>
                  </wpp-list-item>
                  <wpp-list-item value="save">
                    <wpp-icon-cross-v3-3-0 slot="left"></wpp-icon-cross-v3-3-0>
                    <span slot="label">
                      save
                    </span>
                  </wpp-list-item>
                </div>
              </wpp-menu-context>
            </div>
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" search="cars" text="Skoda">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
          <wpp-tree-item level="2" search="cars" text="Volkswagen">
            <div class="content-container" part="content" slot="content"></div>
          </wpp-tree-item>
        </div>
      </wpp-tree-item>
      <wpp-tree-item level="1" search="cars" text="Motorcycle"></wpp-tree-item>
      <wpp-tree-item level="1" search="cars" text="Planes">
        <div class="content-container" part="content" slot="content"></div>
      </wpp-tree-item>
    </div>
  </mock:shadow-root>
</wpp-tree>
`;
